hypr and waybar configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,6 +25,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 monitor=DP-1, 5120x1440@240, 0x0, 1
+monitor=FALLBACK,1920x1080@60, auto, 1
 
 
 ###################
@@ -37,10 +38,10 @@ monitor=DP-1, 5120x1440@240, 0x0, 1
 $terminal = kitty
 $fileManager = dolphin
 $editor = vim
-$menu = wofi --show drun
+$menu = wofi --show drun -G
 $browser = firefox #open web browser with SUPER+B
+$browserPrivate = firefox --private-window
 $lockScreen = hyprlock #lock screen w/ hyprlock with SUPER+ALT+L
-
 
 #################
 ### AUTOSTART ###
@@ -52,7 +53,9 @@ $lockScreen = hyprlock #lock screen w/ hyprlock with SUPER+ALT+L
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & hyprpaper
+exec-once = waybar
+#exec-once = killall hyprpaper
+#exec-once = hyprpaper
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -107,7 +110,7 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = master
+    layout = dwindle
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -180,6 +183,7 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+    smart_split = false
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -187,8 +191,9 @@ master {
     orientation = center
     new_status = slave
     mfact = 0.34
-    slave_count_for_center_master = 2
-    center_master_fallback = left
+    slave_count_for_center_master = 0
+    always_keep_position = true
+    drop_at_cursor = true
 
 }
 
@@ -253,6 +258,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, Y, togglesplit, # dwindle default bound to J
 bind = $mainMod, B, exec, $browser  #custom launches web browser
+bind = $mainMod ALT, B, exec, $browserPrivate #custom launches private web browser
 bind = $mainMod ALT, L, exec, $lockScreen
 
 # Move focus with mainMod + arrow keys
@@ -303,10 +309,10 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Move/resize windows with mainMod + SHIFT + HJKL
-bind = $mainMod SHIFT, L, resizeactive, 10 0
-bind = $mainMod SHIFT, H, resizeactive, -10 0
-bind = $mainMod SHIFT, K, resizeactive, 0 -10
-bind = $mainMod SHIFT, J, resizeactive, 0 10
+bind = $mainMod SHIFT, L, resizeactive, 25 0
+bind = $mainMod SHIFT, H, resizeactive, -25 0
+bind = $mainMod SHIFT, K, resizeactive, 0 -25
+bind = $mainMod SHIFT, J, resizeactive, 0 25
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
