--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,10 +38,12 @@ monitor=FALLBACK,1920x1080@60, auto, 1
 $terminal = kitty
 $fileManager = dolphin
 $editor = vim
-$menu = wofi --show drun -G
+$menu = wofi --show drun -G -W 500
 $browser = firefox #open web browser with SUPER+B
 $browserPrivate = firefox --private-window
 $lockScreen = hyprlock #lock screen w/ hyprlock with SUPER+ALT+L
+$screenShotClip = grim -g "$(slurp)" - | wl-copy
+$screenShotSave = grim -g "$(slurp)" #saves to ~/Pictures
 
 #################
 ### AUTOSTART ###
@@ -54,8 +56,7 @@ $lockScreen = hyprlock #lock screen w/ hyprlock with SUPER+ALT+L
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
-#exec-once = killall hyprpaper
-#exec-once = hyprpaper
+exec-once = dunst
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -229,7 +230,6 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
 }
 
 # Example per-device config
@@ -248,7 +248,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
@@ -259,7 +259,9 @@ bind = $mainMod, F, fullscreen,
 bind = $mainMod, Y, togglesplit, # dwindle default bound to J
 bind = $mainMod, B, exec, $browser  #custom launches web browser
 bind = $mainMod ALT, B, exec, $browserPrivate #custom launches private web browser
-bind = $mainMod ALT, L, exec, $lockScreen
+bind = $mainMod CONTROL, L, exec, $lockScreen
+bind = $mainMod, O, exec, $screenShotClip
+bind = $mainMod ALT, O, exec, $screenShotSave
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
@@ -271,6 +273,12 @@ bind = $mainMod, J, movefocus, d
 #bind = $mainMod, right, movefocus, r
 #bind = $mainMod, up, movefocus, u
 #bind = $mainMod, down, movefocus, d
+
+# Move window with mainMod + ALT keys
+bind = $mainMod ALT, H, movewindow, l
+bind = $mainMod ALT, L, movewindow, r
+bind = $mainMod ALT, K, movewindow, u
+bind = $mainMod ALT, J, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
